[tool.poetry]
name = "r2ccp"
version = "0.1.0"
description = ""
authors = ["nnao45 <n4sekai5y@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.2.2"
bash-kernel = "0.7.2"
scikit-learn = "1.5.0"
cython = "3.0.10"
numpy = "1.26.4"
scipy = "1.14.0"
torch = "2.4.0"
quantile-forest = "1.3.7"
configargparse = "^1.7"
lightning = "^2.4.0"
torchvision = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
